--- a/app/src/main/res/layout/fragment_user_change_profile_form.xml
+++ b/app/src/main/res/layout/fragment_user_change_profile_form.xml
@@ -2,11 +2,11 @@
 <androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
-    android:id="@+id/userRegisterLayout"
+    android:id="@+id/userChangeProfileFormLayout"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:background="@color/customBackground"
-    tools:context=".user.fragments.UserRegisterFragment">
+    tools:context=".user.fragments.UserChangeProfileFormFragment">
 
     <ScrollView
         android:layout_width="match_parent"
@@ -22,12 +22,16 @@
             android:layout_gravity="center_horizontal"
             android:orientation="vertical">
 
-            <ImageView
-                android:id="@+id/userRegisterImage"
-                android:layout_width="match_parent"
-                android:layout_height="200dp"
+            <TextView
+                android:id="@+id/userChangeProfileFormText"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
                 android:layout_marginTop="50dp"
-                android:src="@drawable/iconapplight" />
+                android:text="Ubah Profile"
+                android:textColor="@color/customBlack"
+                android:layout_gravity="center"
+                android:textSize="24dp"
+                android:layout_marginBottom="50dp"/>
 
             <com.google.android.material.textfield.TextInputLayout
                 android:layout_width="match_parent"
@@ -37,7 +41,7 @@
                 app:startIconTint="@color/customText">
 
                 <com.google.android.material.textfield.TextInputEditText
-                    android:id="@+id/userRegisterFullName"
+                    android:id="@+id/userChangeProfileFullNameText"
                     android:layout_width="match_parent"
                     android:layout_height="match_parent"
                     android:backgroundTint="@android:color/transparent"
@@ -53,7 +57,7 @@
                 app:startIconTint="@color/customText">
 
                 <com.google.android.material.textfield.TextInputEditText
-                    android:id="@+id/userRegisterEmail"
+                    android:id="@+id/userChangeProfileEmailText"
                     android:layout_width="match_parent"
                     android:layout_height="match_parent"
                     android:backgroundTint="@android:color/transparent"
@@ -69,7 +73,7 @@
                 app:startIconTint="@color/customText">
 
                 <com.google.android.material.textfield.TextInputEditText
-                    android:id="@+id/userRegisterUsername"
+                    android:id="@+id/userChangeProfileUsernameText"
                     android:layout_width="match_parent"
                     android:layout_height="match_parent"
                     android:backgroundTint="@android:color/transparent"
@@ -77,39 +81,7 @@
                     android:textColor="@color/customBlack" />
             </com.google.android.material.textfield.TextInputLayout>
 
-            <com.google.android.material.textfield.TextInputLayout
-                android:layout_width="match_parent"
-                android:layout_height="wrap_content"
-                android:textColorHint="@color/customText"
-                app:boxStrokeColor="@color/customText"
-                app:startIconTint="@color/customText">
 
-                <com.google.android.material.textfield.TextInputEditText
-                    android:id="@+id/userRegisterPassword"
-                    android:layout_width="match_parent"
-                    android:layout_height="match_parent"
-                    android:backgroundTint="@android:color/transparent"
-                    android:hint="Password"
-                    android:inputType="textPassword"
-                    android:textColor="@color/customBlack" />
-            </com.google.android.material.textfield.TextInputLayout>
-
-            <com.google.android.material.textfield.TextInputLayout
-                android:layout_width="match_parent"
-                android:layout_height="wrap_content"
-                android:textColorHint="@color/customText"
-                app:boxStrokeColor="@color/customText"
-                app:startIconTint="@color/customText">
-
-                <com.google.android.material.textfield.TextInputEditText
-                    android:id="@+id/userRegisterConfirmPassword"
-                    android:layout_width="match_parent"
-                    android:layout_height="match_parent"
-                    android:backgroundTint="@android:color/transparent"
-                    android:hint="Konfirmasi Password"
-                    android:inputType="textPassword"
-                    android:textColor="@color/customBlack" />
-            </com.google.android.material.textfield.TextInputLayout>
 
             <com.google.android.material.textfield.TextInputLayout
                 android:layout_width="match_parent"
@@ -127,13 +99,13 @@
                     android:textSize="16dp" />
 
                 <RadioGroup
-                    android:id="@+id/userRegisterRadioGender"
+                    android:id="@+id/userChangeProfileRadioGender"
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
                     android:checkedButton="@+id/userRegisterMale">
 
                     <RadioButton
-                        android:id="@+id/userRegisterMale"
+                        android:id="@+id/userChangeProfileMale"
                         android:layout_width="wrap_content"
                         android:layout_height="wrap_content"
                         android:buttonTint="@color/customButton"
@@ -141,7 +113,7 @@
                         android:textColor="@color/customText" />
 
                     <RadioButton
-                        android:id="@+id/userRegisterFemale"
+                        android:id="@+id/userChangeProfileFemale"
                         android:layout_width="wrap_content"
                         android:layout_height="wrap_content"
                         android:buttonTint="@color/customButton"
@@ -152,37 +124,23 @@
 
 
             <com.google.android.material.button.MaterialButton
-                android:id="@+id/userRegisterButton"
+                android:id="@+id/userChangeProfileSaveButton"
                 android:layout_width="300dp"
                 android:layout_height="wrap_content"
                 android:layout_marginTop="99dp"
                 android:backgroundTint="@color/customButton"
-                android:text="BUAT AKUN"
+                android:text="SIMPAN"
                 android:textColor="@color/customWhite"
                 app:cornerRadius="10dp" />
-
-            <TextView
-                android:layout_width="match_parent"
-                android:layout_height="wrap_content"
-                android:layout_marginTop="20dp"
-                android:gravity="center"
-                android:text="Sudah punya akun ?"
-                android:textColor="@color/customBlack"
-                android:textSize="15dp"
-                android:textStyle="italic" />
-
-            <TextView
-                android:id="@+id/userRegisterToLogin"
-                android:layout_width="match_parent"
+            <com.google.android.material.button.MaterialButton
+                android:id="@+id/userChangeProfileCancelButton"
+                android:layout_width="300dp"
                 android:layout_height="wrap_content"
                 android:layout_marginBottom="100dp"
-                android:clickable="true"
-                android:gravity="center"
-                android:text="Masuk"
-                android:textColor="@color/customLinkText"
-                android:textSize="15dp"
-                android:textStyle="italic" />
+                android:backgroundTint="@color/customButton"
+                android:text="KEMBALI"
+                android:textColor="@color/customWhite"
+                app:cornerRadius="10dp" />
         </LinearLayout>
     </ScrollView>
-
 </androidx.constraintlayout.widget.ConstraintLayout>
