--- a/app/src/main/res/layout/fragment_finding_match.xml
+++ b/app/src/main/res/layout/fragment_finding_match.xml
@@ -2,11 +2,11 @@
 <androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
-    android:id="@+id/userRegisterSuccessLayout"
+    android:id="@+id/findingMatchLayout"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:background="@color/customBackground"
-    tools:context=".user.fragments.UserSuccessRegisterFragment">
+    tools:context=".match.fragments.FindingMatchFragment">
 
     <ScrollView
         android:layout_width="match_parent"
@@ -16,36 +16,36 @@
         app:layout_constraintTop_toTopOf="parent">
 
         <LinearLayout
-            android:id="@+id/userRegisterSuccessLinearLayout"
+            android:id="@+id/matchFindingLinearLayout"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_gravity="center_horizontal"
             android:orientation="vertical">
 
             <pl.droidsonroids.gif.GifImageView
-                android:id="@+id/userRegisterSuccessImage"
+                android:id="@+id/matchFindingImage"
                 android:layout_width="match_parent"
                 android:layout_height="200dp"
                 android:layout_marginTop="200dp"
-                android:src="@drawable/success_animation" />
+                android:src="@drawable/loading_find_match" />
 
             <TextView
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:layout_gravity="center_horizontal"
                 android:layout_marginTop="10dp"
-                android:text="Akun Berhasil Ditambakan !"
+                android:text="Menunggu Lawan ..."
                 android:textColor="@color/customBlack"
                 android:textSize="20dp" />
 
             <com.google.android.material.button.MaterialButton
-                android:id="@+id/userRegisterSuccessButton"
+                android:id="@+id/matchFindingCancelButton"
                 android:layout_width="300dp"
                 android:layout_height="wrap_content"
                 android:layout_marginTop="60dp"
                 android:layout_marginBottom="100dp"
                 android:backgroundTint="@color/customButton"
-                android:text="MASUK"
+                android:text="BATALKAN PENCARIAN"
                 android:textColor="@color/customWhite"
                 app:cornerRadius="10dp" />
 
