--- a/app/src/main/res/layout/fragment_menu_account.xml
+++ b/app/src/main/res/layout/fragment_menu_account.xml
@@ -25,7 +25,7 @@
             <com.google.android.material.card.MaterialCardView
                 android:id="@+id/menuAccountMaterialCard"
                 android:layout_width="match_parent"
-                android:layout_height="150dp"
+                android:layout_height="wrap_content"
                 android:layout_marginLeft="15dp"
                 android:layout_marginTop="15dp"
                 android:layout_marginRight="15dp"
@@ -35,12 +35,13 @@
                 <LinearLayout
                     android:layout_width="match_parent"
                     android:layout_height="match_parent"
-                    android:orientation="horizontal">
+                    android:orientation="vertical">
 
-                    <de.hdodenhof.circleimageview.CircleImageView xmlns:app="http://schemas.android.com/apk/res-auto"
-                        android:layout_width="90dp"
-                        android:layout_height="90dp"
-                        android:layout_gravity="center_vertical"
+                    <de.hdodenhof.circleimageview.CircleImageView
+                        android:layout_width="150dp"
+                        android:layout_height="150dp"
+                        android:layout_gravity="center"
+                        android:layout_marginTop="20dp"
                         android:layout_marginLeft="10dp"
                         android:layout_weight="1"
                         android:src="@drawable/arieltatum"
@@ -51,10 +52,11 @@
                         android:layout_width="wrap_content"
                         android:layout_height="wrap_content"
                         android:layout_gravity="center"
-                        android:layout_marginLeft="30dp"
-                        android:layout_weight="1"
-                        android:text="Username\nMatch : 100\nRank: 70"
+                        android:layout_marginTop="20dp"
+                        android:textAlignment="center"
+                        android:text="Username awdawda awdaw dawd awd awd awdaw daw dawd awdaw\nMatch : 100\nRank: 70"
                         android:textColor="@color/customWhite"
+                        android:layout_marginBottom="20dp"
                         android:textSize="25dp" />
                 </LinearLayout>
             </com.google.android.material.card.MaterialCardView>
