--- a/app/src/main/res/layout/fragment_user_change_profile_success.xml
+++ b/app/src/main/res/layout/fragment_user_change_profile_success.xml
@@ -2,11 +2,11 @@
 <androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
-    android:id="@+id/userRegisterSuccessLayout"
+    android:id="@+id/userChangeProfileSuccessLayout"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:background="@color/customBackground"
-    tools:context=".user.fragments.UserSuccessRegisterFragment">
+    tools:context=".user.fragments.UserChangeProfileSuccessFragment">
 
     <ScrollView
         android:layout_width="match_parent"
@@ -16,39 +16,38 @@
         app:layout_constraintTop_toTopOf="parent">
 
         <LinearLayout
-            android:id="@+id/userRegisterSuccessLinearLayout"
+            android:id="@+id/userChangeProfileSuccessLinearLayout"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_gravity="center_horizontal"
             android:orientation="vertical">
 
+
             <pl.droidsonroids.gif.GifImageView
-                android:id="@+id/userRegisterSuccessImage"
+                android:id="@+id/userChangeProfileSuccessImage"
                 android:layout_width="match_parent"
                 android:layout_height="200dp"
                 android:layout_marginTop="200dp"
                 android:src="@drawable/success_animation" />
-
             <TextView
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:layout_gravity="center_horizontal"
                 android:layout_marginTop="10dp"
-                android:text="Akun Berhasil Ditambakan !"
+                android:text="Profil Berhasil Diubah !"
                 android:textColor="@color/customBlack"
                 android:textSize="20dp" />
 
             <com.google.android.material.button.MaterialButton
-                android:id="@+id/userRegisterSuccessButton"
+                android:id="@+id/userChangeProfileSuccessButton"
                 android:layout_width="300dp"
                 android:layout_height="wrap_content"
                 android:layout_marginTop="60dp"
                 android:layout_marginBottom="100dp"
                 android:backgroundTint="@color/customButton"
-                android:text="MASUK"
+                android:text="SELESAI"
                 android:textColor="@color/customWhite"
                 app:cornerRadius="10dp" />
-
         </LinearLayout>
     </ScrollView>
 
