[UPDATE]fix gender radio

--- a/app/src/main/res/layout/fragment_menu_account.xml
+++ b/app/src/main/res/layout/fragment_menu_account.xml
@@ -38,6 +38,8 @@
                     android:orientation="vertical">
 
                     <de.hdodenhof.circleimageview.CircleImageView
+                        android:id="@+id/menuAccountImage"
+                        android:clickable="true"
                         android:layout_width="150dp"
                         android:layout_height="150dp"
                         android:layout_gravity="center"
