--- a/app/src/main/res/layout/fragment_menu_account.xml
+++ b/app/src/main/res/layout/fragment_menu_account.xml
@@ -46,7 +46,7 @@
                         android:layout_marginTop="20dp"
                         android:layout_marginLeft="10dp"
                         android:layout_weight="1"
-                        android:src="@drawable/arieltatum"
+                        android:src="@drawable/user_icon_jpg"
                         app:civ_border_width="2dp" />
 
                     <TextView
