[UPDATE] schedule recycle view

--- a/app/src/main/res/layout/fragment_menu_schedule.xml
+++ b/app/src/main/res/layout/fragment_menu_schedule.xml
@@ -42,27 +42,49 @@
                     android:textColor="@color/customWhite"
                     android:textSize="25dp" />
             </com.google.android.material.card.MaterialCardView>
-            <com.google.android.material.button.MaterialButton
-                android:id="@+id/menuScheduleCreate"
-                android:layout_width="300dp"
-                android:layout_height="wrap_content"
-                android:layout_marginTop="60dp"
-                android:text="BUAT JADWAL"
-                android:layout_gravity="center"
-                android:textColor="@color/customWhite"
-                android:backgroundTint="@color/customButton"
-                app:cornerRadius="10dp"/>
-            <com.google.android.material.button.MaterialButton
-                android:id="@+id/menuScheduleHistory"
-                android:layout_width="300dp"
-                android:layout_height="wrap_content"
-                android:text="RIWAYAT PERTANDINGAN"
-                android:layout_gravity="center"
-                android:textColor="@color/customWhite"
-                android:backgroundTint="@color/customButton"
-                android:layout_marginBottom="100dp"
-                app:cornerRadius="10dp"/>
 
+            <LinearLayout
+                android:id="@+id/menuScheduleButtonLinearLayout"
+                android:layout_width="match_parent"
+                android:layout_height="match_parent"
+                android:layout_marginLeft="15dp"
+                android:layout_marginTop="10dp"
+                android:layout_marginRight="15dp"
+                android:orientation="horizontal">
+
+                <com.google.android.material.button.MaterialButton
+                    android:id="@+id/menuScheduleActiveButton"
+                    android:layout_width="match_parent"
+                    android:layout_height="60dp"
+                    android:layout_gravity="center"
+                    android:layout_marginRight="10dp"
+                    android:layout_weight="1"
+                    android:backgroundTint="@color/customButton"
+                    android:text="DAFTAR PERTANDINGAN"
+                    android:textColor="@color/customWhite"
+                    app:cornerRadius="10dp" />
+
+                <com.google.android.material.button.MaterialButton
+                    android:id="@+id/menuScheduleHistoryButton"
+                    android:layout_width="match_parent"
+                    android:layout_height="60dp"
+                    android:layout_gravity="center"
+                    android:layout_weight="1"
+                    android:backgroundTint="@color/customButton"
+                    android:text="RIWAYAT PERTANDINGAN"
+                    android:textColor="@color/customWhite"
+                    app:cornerRadius="10dp" />
+            </LinearLayout>
+            <FrameLayout
+                android:id="@+id/menuScheduleContainer"
+                android:layout_width="match_parent"
+                android:layout_height="match_parent"
+                android:layout_marginTop="10dp"
+                android:layout_marginBottom="100dp"
+                app:layout_constraintBottom_toBottomOf="parent"
+                app:layout_constraintEnd_toEndOf="parent"
+                app:layout_constraintStart_toStartOf="parent"
+                app:layout_constraintTop_toBottomOf="@+id/menuScheduleButtonLinearLayout"/>
         </LinearLayout>
     </ScrollView>
 </androidx.constraintlayout.widget.ConstraintLayout>
