--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -11,6 +11,7 @@
     <color name="customText">#808080</color>
     <color name="custom1">#F9E07E</color>
     <color name="custom2">#17A398</color>
+    <color name="customChat">#323739</color>
     <color name="customLinkText">#0AC1A5</color>
     <color name="custom4">#030303</color>
     <color name="customBackground">#F5F5F5</color>
