--- a/app/src/main/res/layout/recycle_view_chat_details.xml
+++ b/app/src/main/res/layout/recycle_view_chat_details.xml
@@ -1,12 +1,12 @@
 <?xml version="1.0" encoding="utf-8"?>
-<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<androidx.constraintlayout.widget.ConstraintLayout
+    xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
-    android:id="@+id/recycleViewScheduleLayout"
+    android:id="@+id/recycleViewChatDetailsLayout"
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
     android:background="@color/customBackground">
-
     <FrameLayout
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
@@ -47,8 +47,7 @@
                     android:layout_gravity="right"
                     android:layout_marginRight="20dp"
                     android:layout_marginBottom="10dp"
-                    android:drawableTint="@color/customWhite"
-                    android:drawableStart="@drawable/ic_baseline_navigate_next_24"
+                    android:text="Menang"
                     android:textColor="@color/customWhite"
                     android:textSize="20dp" />
             </LinearLayout>
