[UPDATE]add layout result and matching

--- a/app/src/main/res/layout/fragment_result_win.xml
+++ b/app/src/main/res/layout/fragment_result_win.xml
@@ -8,5 +8,46 @@
     android:background="@color/customBackground"
     tools:context=".result.fragments.ResultWinFragment">
 
+    <ScrollView
+        android:layout_width="match_parent"
+        android:layout_height="match_parent"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toTopOf="parent">
 
+        <LinearLayout
+            android:id="@+id/resultWinLinearLayout"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_gravity="center_horizontal"
+            android:orientation="vertical">
+
+            <pl.droidsonroids.gif.GifImageView
+                android:id="@+id/resultWinImage"
+                android:layout_width="match_parent"
+                android:layout_height="200dp"
+                android:layout_marginTop="200dp"
+                android:src="@drawable/result_win_animation" />
+
+            <TextView
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_gravity="center_horizontal"
+                android:layout_marginTop="10dp"
+                android:text="Selamat atas kemenangan anda ..."
+                android:textColor="@color/customBlack"
+                android:textSize="20dp" />
+
+            <com.google.android.material.button.MaterialButton
+                android:id="@+id/resultWinButton"
+                android:layout_width="300dp"
+                android:layout_height="wrap_content"
+                android:layout_marginTop="60dp"
+                android:layout_marginBottom="100dp"
+                android:backgroundTint="@color/customButton"
+                android:text="SELESAI"
+                android:textColor="@color/customWhite"
+                app:cornerRadius="10dp" />
+        </LinearLayout>
+    </ScrollView>
 </androidx.constraintlayout.widget.ConstraintLayout>
