--- a/app/src/main/res/layout/fragment_playing_match.xml
+++ b/app/src/main/res/layout/fragment_playing_match.xml
@@ -2,12 +2,11 @@
 <androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
-    android:id="@+id/resultLoseLayout"
+    android:id="@+id/playingMatchLayout"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:background="@color/customBackground"
-    tools:context=".result.fragments.ResultLoseFragment">
-
+    tools:context=".match.fragments.PlayingMatchFragment">
     <ScrollView
         android:layout_width="match_parent"
         android:layout_height="match_parent"
@@ -16,39 +15,38 @@
         app:layout_constraintTop_toTopOf="parent">
 
         <LinearLayout
-            android:id="@+id/resultLoseLinearLayout"
+            android:id="@+id/playingMatchLinearLayout"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_gravity="center_horizontal"
             android:orientation="vertical">
 
             <pl.droidsonroids.gif.GifImageView
-                android:id="@+id/resultLoseImage"
+                android:id="@+id/playingMatchImage"
                 android:layout_width="match_parent"
                 android:layout_height="200dp"
                 android:layout_marginTop="200dp"
-                android:src="@drawable/result_lose_animation" />
+                android:src="@drawable/playing_animation" />
 
             <TextView
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:layout_gravity="center_horizontal"
                 android:layout_marginTop="10dp"
-                android:text="Jangan bersedih, coba lagi ..."
+                android:text="Sedang bertanding ..."
                 android:textColor="@color/customBlack"
                 android:textSize="20dp" />
 
             <com.google.android.material.button.MaterialButton
-                android:id="@+id/resultLoseButton"
+                android:id="@+id/playingMatchResultButton"
                 android:layout_width="300dp"
                 android:layout_height="wrap_content"
                 android:layout_marginTop="60dp"
                 android:layout_marginBottom="100dp"
                 android:backgroundTint="@color/customButton"
-                android:text="SELESAI"
+                android:text="HASIL PERTANDINGAN"
                 android:textColor="@color/customWhite"
                 app:cornerRadius="10dp" />
         </LinearLayout>
     </ScrollView>
-
 </androidx.constraintlayout.widget.ConstraintLayout>
