--- a/app/src/main/res/layout/fragment_menu_account.xml
+++ b/app/src/main/res/layout/fragment_menu_account.xml
@@ -46,7 +46,6 @@
                         android:layout_marginTop="20dp"
                         android:layout_marginLeft="10dp"
                         android:layout_weight="1"
-                        android:src="@drawable/user_icon_jpg"
                         app:civ_border_width="2dp" />
 
                     <TextView
@@ -72,15 +71,15 @@
                 android:textColor="@color/customWhite"
                 android:backgroundTint="@color/customButton"
                 app:cornerRadius="10dp"/>
-            <com.google.android.material.button.MaterialButton
-                android:id="@+id/menuAccountSettingPassword"
-                android:layout_width="300dp"
-                android:layout_height="wrap_content"
-                android:text="UBAH PASSWORD"
-                android:layout_gravity="center"
-                android:textColor="@color/customWhite"
-                android:backgroundTint="@color/customButton"
-                app:cornerRadius="10dp"/>
+<!--            <com.google.android.material.button.MaterialButton-->
+<!--                android:id="@+id/menuAccountSettingPassword"-->
+<!--                android:layout_width="300dp"-->
+<!--                android:layout_height="wrap_content"-->
+<!--                android:text="UBAH PASSWORD"-->
+<!--                android:layout_gravity="center"-->
+<!--                android:textColor="@color/customWhite"-->
+<!--                android:backgroundTint="@color/customButton"-->
+<!--                app:cornerRadius="10dp"/>-->
             <com.google.android.material.button.MaterialButton
                 android:id="@+id/menuAccountLogout"
                 android:layout_width="300dp"
