--- a/app/src/main/res/layout/fragment_schedule_details.xml
+++ b/app/src/main/res/layout/fragment_schedule_details.xml
@@ -1,13 +1,103 @@
 <?xml version="1.0" encoding="utf-8"?>
-<androidx.constraintlayout.widget.ConstraintLayout
-    xmlns:android="http://schemas.android.com/apk/res/android"
+<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:id="@+id/scheduleDetailsLayout"
-    android:background="@color/customBackground"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
+    android:background="@color/customBackground"
     tools:context=".schedule.fragments.ScheduleDetailsFragment">
 
+    <ScrollView
+        android:layout_width="match_parent"
+        android:layout_height="match_parent"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toTopOf="parent">
 
+        <LinearLayout
+            android:id="@+id/scheduleDetailsLinearLayout"
+            android:layout_width="match_parent"
+            android:layout_height="match_parent"
+            android:layout_gravity="center_horizontal"
+            android:orientation="vertical">
+
+            <com.google.android.material.card.MaterialCardView
+                android:id="@+id/scheduleDetailsMaterialCard"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:layout_marginLeft="15dp"
+                android:layout_marginTop="15dp"
+                android:layout_marginRight="15dp"
+                android:backgroundTint="@color/customLinkText"
+                app:cardCornerRadius="20dp">
+
+                <LinearLayout
+                    android:layout_width="match_parent"
+                    android:layout_height="match_parent"
+                    android:orientation="vertical">
+
+                    <LinearLayout
+                        android:layout_width="wrap_content"
+                        android:layout_height="wrap_content"
+                        android:layout_gravity="center"
+                        android:orientation="horizontal">
+
+                        <de.hdodenhof.circleimageview.CircleImageView
+                            android:id="@+id/scheduleDetailsPlayerOneImage"
+                            android:layout_width="150dp"
+                            android:layout_height="150dp"
+                            android:layout_marginLeft="10dp"
+                            android:layout_marginTop="20dp"
+                            android:layout_weight="1"
+                            android:clickable="true"
+                            android:src="@drawable/user_icon_jpg"
+                            app:civ_border_width="2dp" />
+                        <com.google.android.material.textview.MaterialTextView
+                            android:layout_width="wrap_content"
+                            android:layout_height="wrap_content"
+                            android:text="VS"
+                            android:layout_gravity="center"
+                            android:textSize="30dp"
+                            android:layout_marginHorizontal="10dp"
+                            android:textColor="@color/customWhite"
+                            android:layout_weight="1"/>
+                        <de.hdodenhof.circleimageview.CircleImageView
+                            android:id="@+id/scheduleDetailsPlayerTwoImage"
+                            android:layout_width="150dp"
+                            android:layout_height="150dp"
+                            android:layout_marginLeft="10dp"
+                            android:layout_marginTop="20dp"
+                            android:layout_weight="1"
+                            android:clickable="true"
+                            android:src="@drawable/user_icon_jpg"
+                            app:civ_border_width="2dp" />
+                    </LinearLayout>
+                    <TextView
+                        android:id="@+id/scheduleDetailsText"
+                        android:layout_width="wrap_content"
+                        android:layout_height="wrap_content"
+                        android:layout_gravity="center"
+                        android:layout_marginTop="20dp"
+                        android:layout_marginBottom="20dp"
+                        android:text="Username awdawda awdaw dawd awd awd awdaw daw dawd awdaw\nMatch : 100\nRank: 70"
+                        android:textAlignment="center"
+                        android:textColor="@color/customWhite"
+                        android:textSize="25dp" />
+                </LinearLayout>
+            </com.google.android.material.card.MaterialCardView>
+
+            <com.google.android.material.button.MaterialButton
+                android:id="@+id/scheduleDetailsPlayButton"
+                android:layout_width="300dp"
+                android:layout_height="wrap_content"
+                android:layout_gravity="center"
+                android:layout_marginTop="60dp"
+                android:layout_marginBottom="100dp"
+                android:backgroundTint="@color/customButton"
+                android:text="MULAI PERTANDINGAN"
+                android:textColor="@color/customWhite"
+                app:cornerRadius="10dp" />
+        </LinearLayout>
+    </ScrollView>
 </androidx.constraintlayout.widget.ConstraintLayout>
