--- a/app/src/main/res/layout/fragment_menu_rank.xml
+++ b/app/src/main/res/layout/fragment_menu_rank.xml
@@ -51,6 +51,7 @@
                 android:layout_height="match_parent">
 
                 <LinearLayout
+                    android:id="@+id/menuRankButtonLinearLayout"
                     android:layout_width="wrap_content"
                     android:layout_height="match_parent"
                     android:orientation="horizontal" >
@@ -106,15 +107,15 @@
                         app:cornerRadius="10dp"/>
                 </LinearLayout>
             </HorizontalScrollView>
-            <TextView
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:text="DAFTAR RANK USER"
-                android:textSize="30dp"
-                android:textColor="@color/customText"
-                android:layout_gravity="center"
-                android:layout_marginTop="175dp"
-                android:layout_marginBottom="100dp"/>
+            <FrameLayout
+                android:id="@+id/menuRankContainer"
+                android:layout_width="match_parent"
+                android:layout_height="match_parent"
+                android:layout_marginTop="10dp"
+                app:layout_constraintBottom_toBottomOf="parent"
+                app:layout_constraintEnd_toEndOf="parent"
+                app:layout_constraintStart_toStartOf="parent"
+                app:layout_constraintTop_toBottomOf="@+id/menuRankButtonLinearLayout"/>
         </LinearLayout>
     </ScrollView>
 </androidx.constraintlayout.widget.ConstraintLayout>
