[UPDATE] add chat feature

--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -14,6 +14,7 @@
     <color name="customLose">#DA2B00</color>
     <color name="custom2">#17A398</color>
     <color name="customChat">#323739</color>
+    <color name="customChatSecond">#1b9a59</color>
     <color name="customLinkText">#0AC1A5</color>
     <color name="custom4">#030303</color>
     <color name="customBackground">#F5F5F5</color>
