--- a/app/src/main/res/layout/fragment_chat_details.xml
+++ b/app/src/main/res/layout/fragment_chat_details.xml
@@ -8,12 +8,20 @@
     android:layout_height="match_parent"
     android:background="@color/customBackground"
     tools:context=".chat.fragments.ChatDetailsFragment">
+
     <androidx.recyclerview.widget.RecyclerView
         android:id="@+id/chatDetailsRecycleViewContainer"
         android:layout_width="match_parent"
-        android:layout_height="match_parent" />
+        android:layout_height="0dp"
+        android:layout_marginTop="10dp"
+        android:layout_marginBottom="20dp"
+        app:layout_constraintBottom_toTopOf="@+id/chatDetailsInputLayout"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toTopOf="parent" />
 
     <LinearLayout
+        android:id="@+id/chatDetailsInputLayout"
         android:layout_width="match_parent"
         android:layout_height="50dp"
         android:orientation="horizontal"
