--- a/app/src/main/res/layout/fragment_menu_rank.xml
+++ b/app/src/main/res/layout/fragment_menu_rank.xml
@@ -37,7 +37,7 @@
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
                     android:layout_gravity="center"
-                    android:text="Rank user"
+                    android:text="Peringkat pemain"
                     android:textAlignment="center"
                     android:textColor="@color/customWhite"
                     android:textSize="25dp" />
