--- a/app/src/main/res/layout/recycle_view_chat_details.xml
+++ b/app/src/main/res/layout/recycle_view_chat_details.xml
@@ -1,12 +1,12 @@
 <?xml version="1.0" encoding="utf-8"?>
-<androidx.constraintlayout.widget.ConstraintLayout
-    xmlns:android="http://schemas.android.com/apk/res/android"
+<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:id="@+id/recycleViewChatDetailsLayout"
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
     android:background="@color/customBackground">
+
     <FrameLayout
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
@@ -14,43 +14,72 @@
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent">
 
-        <com.google.android.material.card.MaterialCardView
+        <LinearLayout
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:layout_marginLeft="15dp"
-            android:layout_marginTop="15dp"
-            android:layout_marginRight="15dp"
-            android:backgroundTint="@color/customChat"
-            app:cardCornerRadius="10dp">
+            android:orientation="vertical">
 
-            <LinearLayout
-                android:layout_gravity="center"
-                android:layout_width="match_parent"
+            <com.google.android.material.card.MaterialCardView
+                android:id="@+id/chatDetailsUserOneCardView"
+                android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:orientation="vertical">
+                android:layout_marginLeft="15dp"
+                android:layout_marginTop="15dp"
+                android:layout_gravity="left"
+                android:layout_marginRight="15dp"
+                android:backgroundTint="@color/customChat"
+                app:cardCornerRadius="10dp">
 
-                <TextView
-                    android:id="@+id/menuScheduleListText"
+                <LinearLayout
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
                     android:layout_gravity="center"
-                    android:layout_marginTop="10dp"
-                    android:text="vs Player Two - Istora Senayan - June 9, 2020"
-                    android:textAlignment="center"
-                    android:textColor="@color/customWhite"
-                    android:textSize="25dp" />
+                    android:orientation="vertical">
 
-                <TextView
-                    android:id="@+id/menuScheduleStatusText"
+                    <TextView
+                        android:id="@+id/chatDetailsUserOneText"
+                        android:layout_width="wrap_content"
+                        android:layout_height="wrap_content"
+                        android:layout_gravity="left"
+                        android:layout_marginHorizontal="20dp"
+                        android:layout_marginVertical="10dp"
+                        android:text="User One Text"
+                        android:textColor="@color/customWhite"
+                        android:textSize="25dp" />
+
+
+                </LinearLayout>
+            </com.google.android.material.card.MaterialCardView>
+
+            <com.google.android.material.card.MaterialCardView
+                android:id="@+id/chatDetailsUserTwoCardView"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_marginLeft="15dp"
+                android:layout_marginTop="15dp"
+                android:layout_gravity="right"
+                android:layout_marginRight="15dp"
+                android:backgroundTint="@color/customChatSecond"
+                app:cardCornerRadius="10dp">
+
+                <LinearLayout
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
-                    android:layout_gravity="right"
-                    android:layout_marginRight="20dp"
-                    android:layout_marginBottom="10dp"
-                    android:text="Menang"
-                    android:textColor="@color/customWhite"
-                    android:textSize="20dp" />
-            </LinearLayout>
-        </com.google.android.material.card.MaterialCardView>
+                    android:layout_gravity="center"
+                    android:orientation="vertical">
+
+                    <TextView
+                        android:id="@+id/chatDetailsUserTwoText"
+                        android:layout_width="wrap_content"
+                        android:layout_height="wrap_content"
+                        android:layout_gravity="left"
+                        android:layout_marginHorizontal="20dp"
+                        android:layout_marginVertical="10dp"
+                        android:text="User Two Text"
+                        android:textColor="@color/customWhite"
+                        android:textSize="25dp" />
+                </LinearLayout>
+            </com.google.android.material.card.MaterialCardView>
+        </LinearLayout>
     </FrameLayout>
 </androidx.constraintlayout.widget.ConstraintLayout>
